<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/fragment_most_popular_swipe_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nytimes.alex.mynews.Controllers.Fragments.MostPopularFragment">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/fragment_most_popular_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</android.support.v4.widget.SwipeRefreshLayout>